@@ -359,6 +359,8 @@ static slurm_errtab_t slurm_errtab[] = {
 	  "Invalid TRESBillingWeights specification"            },
 	{ ESLURM_INVALID_JOB_DEFAULTS,
 	  "Invalid JobDefaults specification"			},
+	{ ESLURM_RESERVATION_MAINT,
+	  "Job can not start due to maintenance reservation."	},
 
 	/* slurmd error codes */
 	{ ESLRUMD_PIPE_ERROR_ON_TASK_SPAWN,
